--- a/src/MeuPonto.Web/Modules/Pontos/Folhas/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Folhas/Index.cshtml
@@ -151,7 +151,7 @@
                                 <i class="bi bi-trash"></i>
                             </a>
                             <a class="btn btn-link rounded-0 Fechamento" asp-page="./Fechar" asp-route-id="@item.Id" title="Fechar">
-                                <i class="bi bi-file-earmark-x"></i>
+                                <i class="bi bi-file-earmark-check"></i>
                             </a>
                         </div>
                     </td>
