--- a/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
+++ b/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
@@ -13,7 +13,10 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Meu Ponto</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">
+                    <img src="~/img/logo-32-32-dark.png" width="32" height="32" alt="Logo" />
+                    Meu Ponto
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,7 +52,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
-    
+
     @if (ViewData.ShowModal())
     {
         <div class="modal-backdrop fade show"></div>
