--- a/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
+++ b/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="~/MeuPonto.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+    <header class="box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">
                     <img src="~/img/logo-32-32-dark.png" width="32" height="32" alt="Logo" />
@@ -34,6 +34,68 @@
                 </div>
             </div>
         </nav>
+        <div class="navbar navbar-light bg-light border-bottom">
+            @*<div class="container justify-content-start">
+            <span class="badge text-bg-secondary me-2">Anúncio</span>
+            <span class="navbar-brand">
+            <img class="img-thumbnail border border-secondary bg-light" src="~/img/shop-32x32.png" width="32" height="32" alt="Shop" />
+            Anuncie aqui
+            </span>
+            <span class="navbar-text flex-grow-1">
+            Seja visto pelos trabalhadores de todo o Brasil
+            </span>
+            <span>
+            <a href="mailto:mardsystems@hotmail.com" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
+            <i class="bi bi-envelope"></i>
+            Contactar
+            </a>
+            </span>
+            </div>*@
+            <div class="container justify-content-start">
+                <span class="badge text-bg-secondary me-2">Anúncio</span>
+                <span class="navbar-brand">
+                    <img class="img-thumbnail border border-secondary bg-light" src="~/img/marcelo-32x32.png" width="32" height="32" alt="Foto" />
+                    Marcelo Dias
+                </span>
+                <span class="navbar-text flex-grow-1">
+                    Desenvolvedor .NET Sênior
+                </span>
+                <span>
+                    <a href="https://linkedin.com/in/mardsystems" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
+                        <i class="bi bi-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/mardsystems" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
+                        <i class="bi bi-github"></i>
+                    </a>
+                    <a href="mailto:mardsystems@gmail.com" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
+                        <i class="bi bi-envelope"></i>
+                        Contactar
+                    </a>
+                </span>
+            </div>
+            @*<div class="container justify-content-start">
+            <span class="badge text-bg-secondary me-2">Anúncio</span>
+            <span class="navbar-brand">
+            <img class="img-thumbnail border border-secondary bg-light" src="~/img/ateliex-32x32.png" width="32" height="32" alt="Logo" />
+            Ateliex
+            </span>
+            <span class="navbar-text flex-grow-1">
+            Desenvolvimento de sistemas
+            </span>
+            <span>
+            <a href="https://www.linkedin.com/company/ateliex" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
+            <i class="bi bi-linkedin"></i>
+            </a>
+            <a href="https://github.com/ateliex" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
+            <i class="bi bi-github"></i>
+            </a>
+            <a href="https://ateliex.com.br/" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
+            <i class="bi bi-globe2"></i>
+            Conhecer
+            </a>
+            </span>
+            </div>*@
+        </div>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
