--- a/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
+++ b/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@{
+    var random = new Random();
+
+    var anuncioId = random.Next(3) + 1;
+}
+
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="utf-8" />
@@ -35,66 +41,83 @@
             </div>
         </nav>
         <div class="navbar navbar-light bg-light border-bottom">
-            @*<div class="container justify-content-start">
-            <span class="badge text-bg-secondary me-2">Anúncio</span>
-            <span class="navbar-brand">
-            <img class="img-thumbnail border border-secondary bg-light" src="~/img/shop-32x32.png" width="32" height="32" alt="Shop" />
-            Anuncie aqui
-            </span>
-            <span class="navbar-text flex-grow-1">
-            Seja visto pelos trabalhadores de todo o Brasil
-            </span>
-            <span>
-            <a href="mailto:mardsystems@hotmail.com" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
-            <i class="bi bi-envelope"></i>
-            Contactar
-            </a>
-            </span>
-            </div>*@
-            <div class="container justify-content-start">
-                <span class="badge text-bg-secondary me-2">Anúncio</span>
-                <span class="navbar-brand">
-                    <img class="img-thumbnail border border-secondary bg-light" src="~/img/marcelo-32x32.png" width="32" height="32" alt="Foto" />
-                    Marcelo Dias
-                </span>
-                <span class="navbar-text flex-grow-1">
-                    Desenvolvedor .NET Sênior
-                </span>
-                <span>
-                    <a href="https://linkedin.com/in/mardsystems" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
-                        <i class="bi bi-linkedin"></i>
-                    </a>
-                    <a href="https://github.com/mardsystems" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
-                        <i class="bi bi-github"></i>
-                    </a>
-                    <a href="mailto:mardsystems@gmail.com" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
-                        <i class="bi bi-envelope"></i>
-                        Contactar
-                    </a>
-                </span>
-            </div>
-            @*<div class="container justify-content-start">
-            <span class="badge text-bg-secondary me-2">Anúncio</span>
-            <span class="navbar-brand">
-            <img class="img-thumbnail border border-secondary bg-light" src="~/img/ateliex-32x32.png" width="32" height="32" alt="Logo" />
-            Ateliex
-            </span>
-            <span class="navbar-text flex-grow-1">
-            Desenvolvimento de sistemas
-            </span>
-            <span>
-            <a href="https://www.linkedin.com/company/ateliex" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
-            <i class="bi bi-linkedin"></i>
-            </a>
-            <a href="https://github.com/ateliex" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
-            <i class="bi bi-github"></i>
-            </a>
-            <a href="https://ateliex.com.br/" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
-            <i class="bi bi-globe2"></i>
-            Conhecer
-            </a>
-            </span>
-            </div>*@
+            @switch (anuncioId)
+            {
+                case 1:
+                    <div class="container justify-content-start">
+                        <span class="badge text-bg-secondary me-2">Anúncio</span>
+                        <span class="navbar-brand">
+                            <img class="img-thumbnail border border-secondary bg-light" src="~/img/shop-32x32.png" width="32" height="32" alt="Shop" />
+                            Anuncie aqui
+                        </span>
+                        <span class="navbar-text flex-grow-1">
+                            Seja visto pelos trabalhadores de todo o Brasil
+                        </span>
+                        <span>
+                            <a href="mailto:mardsystems@hotmail.com" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
+                                <i class="bi bi-envelope"></i>
+                                Contactar
+                            </a>
+                        </span>
+                    </div>
+
+                    break;
+
+                case 2:
+                    <div class="container justify-content-start">
+                        <span class="badge text-bg-secondary me-2">Anúncio</span>
+                        <span class="navbar-brand">
+                            <img class="img-thumbnail border border-secondary bg-light" src="~/img/marcelo-32x32.png" width="32" height="32" alt="Foto" />
+                            Marcelo Dias
+                        </span>
+                        <span class="navbar-text flex-grow-1">
+                            Desenvolvedor .NET Sênior
+                        </span>
+                        <span>
+                            <a href="https://linkedin.com/in/mardsystems" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
+                                <i class="bi bi-linkedin"></i>
+                            </a>
+                            <a href="https://github.com/mardsystems" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
+                                <i class="bi bi-github"></i>
+                            </a>
+                            <a href="mailto:mardsystems@gmail.com" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
+                                <i class="bi bi-envelope"></i>
+                                Contactar
+                            </a>
+                        </span>
+                    </div>
+
+                    break;
+
+                case 3:
+                    <div class="container justify-content-start">
+                        <span class="badge text-bg-secondary me-2">Anúncio</span>
+                        <span class="navbar-brand">
+                            <img class="img-thumbnail border border-secondary bg-light" src="~/img/ateliex-32x32.png" width="32" height="32" alt="Logo" />
+                            Ateliex
+                        </span>
+                        <span class="navbar-text flex-grow-1">
+                            Desenvolvimento de sistemas
+                        </span>
+                        <span>
+                            <a href="https://www.linkedin.com/company/ateliex" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
+                                <i class="bi bi-linkedin"></i>
+                            </a>
+                            <a href="https://github.com/ateliex" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
+                                <i class="bi bi-github"></i>
+                            </a>
+                            <a href="https://ateliex.com.br/" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
+                                <i class="bi bi-globe2"></i>
+                                Conhecer
+                            </a>
+                        </span>
+                    </div>
+
+                    break;
+
+                default:
+                    break;
+            }
         </div>
     </header>
     <div class="container">
