--- a/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
+++ b/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="~/MeuPonto.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header class="box-shadow mb-3">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom">
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark fixed-top border-bottom shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">
                     <img src="~/img/logo-32-32-dark.png" width="32" height="32" alt="Logo" />
@@ -40,7 +40,18 @@
                 </div>
             </div>
         </nav>
-        <div class="navbar navbar-light bg-light border-bottom">
+    </header>
+    <div class="container">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
+
+    <footer class="border-top footer text-muted pt-3">
+        <div class="container">
+            &copy; 2023 - Meu Ponto - <a asp-page="/Privacidade">Privacidade</a> - <a asp-area="" asp-page="/Sobre">Sobre</a>
+        </div>
+        <div class="navbar navbar-light bg-light fixed-bottom border-top">
             @switch (anuncioId)
             {
                 case 1:
@@ -118,17 +129,6 @@
                 default:
                     break;
             }
-        </div>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted pt-3">
-        <div class="container">
-            &copy; 2023 - Meu Ponto - <a asp-page="/Privacidade">Privacidade</a> - <a asp-area="" asp-page="/Sobre">Sobre</a>
         </div>
     </footer>
 
