--- a/src/MeuPonto.Web/Modules/Pontos/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Index.cshtml
@@ -12,134 +12,202 @@
     </ol>
 </nav>
 
-<h1>@ViewData["Title"]</h1>
+@if (User.Identity?.IsAuthenticated == true)
+{
+    <h1>@ViewData["Title"]</h1>
 
-<div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
-    <div class="btn-group me-2" role="group" aria-label="First group">
-        <a class="btn btn-primary" asp-page="./Criar">
-            <i class="bi bi-plus-circle"></i>
-            Criar Novo
-        </a>
-        <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false" data-bs-reference="parent">
-            <span class="visually-hidden">Toggle Dropdown</span>
-        </button>
-        <ul class="dropdown-menu">
-            <li>
-                <a class="dropdown-item Marcacao Ponto" asp-page="./Marcar">
-                    <i class="bi bi-check2-circle"></i>
-                    Marcar Ponto
-                </a>
-            </li>
-        </ul>
+    <div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
+        <div class="btn-group me-2" role="group" aria-label="First group">
+            <a class="btn btn-primary" asp-page="./Criar">
+                <i class="bi bi-plus-circle"></i>
+                Criar Novo
+            </a>
+            <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false" data-bs-reference="parent">
+                <span class="visually-hidden">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+                <li>
+                    <a class="dropdown-item Marcacao Ponto" asp-page="./Marcar">
+                        <i class="bi bi-check2-circle"></i>
+                        Marcar Ponto
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="btn-group" role="group" aria-label="Second group">
+            <a class="btn btn-outline-secondary" asp-page="./Folhas/Index">Folhas</a>
+            <a class="btn btn-outline-secondary" asp-page="./Comprovantes/Index">Comprovantes</a>
+        </div>
     </div>
-    <div class="btn-group" role="group" aria-label="Second group">
-        <a class="btn btn-outline-secondary" asp-page="./Folhas/Index">Folhas</a>
-        <a class="btn btn-outline-secondary" asp-page="./Comprovantes/Index">Comprovantes</a>
-    </div>
-</div>
 
-<form class="table-responsive text-nowrap" method="get">
-    <table class="table table-striped align-middle mb-3 Pontos">
-        <thead class="table-light">
-            <tr>
-                <th scope="col">Ações</th>
-                <th scope="col">
-                    @Html.DisplayNameFor(model => model.Pontos[0].Perfil)
-                </th>
-                <th scope="col">
-                    @Html.DisplayNameFor(model => model.Pontos[0].DataHora)
-                    <i class="bi bi-sort-down"></i>
-                </th>
-                <th scope="col">
-                    @Html.DisplayNameFor(model => model.Pontos[0].MomentoId)
-                </th>
-                <th scope="col">
-                    @Html.DisplayNameFor(model => model.Pontos[0].PausaId)
-                </th>
-                <th scope="col">
-                    @Html.DisplayNameFor(model => model.Pontos[0].Estimado)
-                </th>
-                <th scope="col">
-                    @Html.DisplayNameFor(model => model.Pontos[0].Observacao)
-                </th>
-            </tr>
-            <tr>
-                <th>
-                    <div class="btn-group" role="group">
-                        <button type="submit" value="Filtrar" class="btn btn-secondary">
-                            <i class="bi bi-funnel"></i>
-                            Filtrar
-                        </button>
-                        <a class="btn btn-warning" asp-page="./Index">
-                            <i class="bi bi-x-circle"></i>
-                        </a>
-                    </div>
-                </th>
-                <th>
-                    <select asp-for="PerfilId" class="form-select" asp-items="ViewBag.PerfilId"></select>
-                </th>
-                <th>
-                    <input asp-for="DataHora" class="form-control" />
-                </th>
-                <th>
-                    <select asp-for="Momento" class="form-select" asp-items="Html.GetEnumSelectListWithEmptyValue<MomentoEnum>()"></select>
-                </th>
-                <th>
-                    <select asp-for="Pausa" class="form-select" asp-items="Html.GetEnumSelectListWithEmptyValue<PausaEnum>()"></select>
-                </th>
-                <th>
-                    <select asp-for="Estimado" class="form-select">
-                        <option value=""></option>
-                        <option value="true">Sim</option>
-                        <option value="false">Não</option>
-                    </select>
-                </th>
-                <th>
-                    <input asp-for="Observacao" class="form-control" />
-                </th>
-            </tr>
-        </thead>
-        <tbody class="table-group-divider">
-            @foreach (var item in Model.Pontos)
-            {
+    <form class="table-responsive text-nowrap" method="get">
+        <table class="table table-striped align-middle mb-3 Pontos">
+            <thead class="table-light">
                 <tr>
-                    <td class="p-1" scope="row">
+                    <th scope="col">Ações</th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Pontos[0].Perfil)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Pontos[0].DataHora)
+                        <i class="bi bi-sort-down"></i>
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Pontos[0].MomentoId)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Pontos[0].PausaId)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Pontos[0].Estimado)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Pontos[0].Observacao)
+                    </th>
+                </tr>
+                <tr>
+                    <th>
                         <div class="btn-group" role="group">
-                            <a class="btn btn-link rounded-0" asp-page="./Detalhar" asp-route-id="@item.Id" title="Detalhar">
-                                <i class="bi bi-card-text"></i>
-                            </a>
-                            <a class="btn btn-link Edicao" asp-page="./Editar" asp-route-id="@item.Id" title="Editar">
-                                <i class="bi bi-pencil"></i>
-                            </a>
-                            <a class="btn btn-link text-danger rounded-0 Exclusao" asp-page="./Excluir" asp-route-id="@item.Id" title="Excluir">
-                                <i class="bi bi-trash"></i>
+                            <button type="submit" value="Filtrar" class="btn btn-secondary">
+                                <i class="bi bi-funnel"></i>
+                                Filtrar
+                            </button>
+                            <a class="btn btn-warning" asp-page="./Index">
+                                <i class="bi bi-x-circle"></i>
                             </a>
                         </div>
-                    </td>
-                    <td>
-                        <a class="text-decoration-none" asp-page="/Perfis/Detalhar" asp-route-id="@item.PerfilId" title="Detalhar Perfil" target="_blank">
-                            @Html.DisplayFor(modelItem => item.Perfil.Nome)
-                            <i class="bi bi-link-45deg"></i>
-                        </a>
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DataHora)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.MomentoId)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PausaId)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Estimado)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Observacao)
-                    </td>
+                    </th>
+                    <th>
+                        <select asp-for="PerfilId" class="form-select" asp-items="ViewBag.PerfilId"></select>
+                    </th>
+                    <th>
+                        <input asp-for="DataHora" class="form-control" />
+                    </th>
+                    <th>
+                        <select asp-for="Momento" class="form-select" asp-items="Html.GetEnumSelectListWithEmptyValue<MomentoEnum>()"></select>
+                    </th>
+                    <th>
+                        <select asp-for="Pausa" class="form-select" asp-items="Html.GetEnumSelectListWithEmptyValue<PausaEnum>()"></select>
+                    </th>
+                    <th>
+                        <select asp-for="Estimado" class="form-select">
+                            <option value=""></option>
+                            <option value="true">Sim</option>
+                            <option value="false">Não</option>
+                        </select>
+                    </th>
+                    <th>
+                        <input asp-for="Observacao" class="form-control" />
+                    </th>
                 </tr>
-            }
-        </tbody>
-    </table>
-    <partial name="_Pagination" model="Model.Pagination" />
-</form>
+            </thead>
+            <tbody class="table-group-divider">
+                @foreach (var item in Model.Pontos)
+                {
+                    <tr>
+                        <td class="p-1" scope="row">
+                            <div class="btn-group" role="group">
+                                <a class="btn btn-link rounded-0" asp-page="./Detalhar" asp-route-id="@item.Id" title="Detalhar">
+                                    <i class="bi bi-card-text"></i>
+                                </a>
+                                <a class="btn btn-link Edicao" asp-page="./Editar" asp-route-id="@item.Id" title="Editar">
+                                    <i class="bi bi-pencil"></i>
+                                </a>
+                                <a class="btn btn-link text-danger rounded-0 Exclusao" asp-page="./Excluir" asp-route-id="@item.Id" title="Excluir">
+                                    <i class="bi bi-trash"></i>
+                                </a>
+                            </div>
+                        </td>
+                        <td>
+                            <a class="text-decoration-none" asp-page="/Perfis/Detalhar" asp-route-id="@item.PerfilId" title="Detalhar Perfil" target="_blank">
+                                @Html.DisplayFor(modelItem => item.Perfil.Nome)
+                                <i class="bi bi-link-45deg"></i>
+                            </a>
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.DataHora)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.MomentoId)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.PausaId)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Estimado)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Observacao)
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <partial name="_Pagination" model="Model.Pagination" />
+    </form>
+}
+else
+{
+    <div>
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+                <div class="col-10 col-sm-8 col-lg-6">
+                    <img src="~/img/bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+                </div>
+                <div class="col-lg-6">
+                    <h1 class="display-5 fw-bold lh-1 mb-3">Você no controle</h1>
+                    <p class="lead">Nunca mais assine sua folha de ponto no escuro.</p>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                        <a class="btn btn-primary btn-lg px-4 me-md-2" asp-page="/Index">Apuração de Folha</a>
+                        <a class="btn btn-outline-secondary btn-lg px-4" asp-page="./Comprovantes/Index">Backup de Comprovante</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container px-4 py-5">
+            <h2 class="pb-2 border-bottom">Marcação de Ponto</h2>
+
+            <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+                <div class="d-flex flex-column align-items-start gap-2">
+                    <h3 class="fw-bold">Left-aligned title explaining these awesome features</h3>
+                    <p class="text-muted">Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                    <a href="#" class="btn btn-primary btn-lg">Primary button</a>
+                </div>
+                <div class="row row-cols-1 row-cols-sm-2 g-4">
+                    <div class="d-flex flex-column gap-2">
+                        <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+                            <i class="bi bi-collection"></i>
+                        </div>
+                        <h4 class="fw-semibold mb-0">Featured title</h4>
+                        <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
+                    </div>
+
+                    <div class="d-flex flex-column gap-2">
+                        <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+                            <i class="bi bi-gear-fill"></i>
+                        </div>
+                        <h4 class="fw-semibold mb-0">Featured title</h4>
+                        <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
+                    </div>
+
+                    <div class="d-flex flex-column gap-2">
+                        <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+                            <i class="bi bi-speedometer"></i>
+                        </div>
+                        <h4 class="fw-semibold mb-0">Monitoramento de pausas</h4>
+                        <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
+                    </div>
+
+                    <div class="d-flex flex-column gap-2">
+                        <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+                            <i class="bi bi-table"></i>
+                        </div>
+                        <h4 class="fw-semibold mb-0">Observações do momento</h4>
+                        <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+}
