task: finaliza termos e políticas

--- a/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
+++ b/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
 
     <footer class="border-top footer text-muted pt-3">
         <div class="container">
-            &copy; 2023 - Meu Ponto - <a asp-page="/Privacidade">Privacidade</a> - <a asp-area="" asp-page="/Sobre">Sobre</a>
+            &copy; 2023 - Meu Ponto - <a asp-page="/Termos">Termos</a> - <a asp-page="/Privacidade">Privacidade</a> - <a asp-area="" asp-page="/Sobre">Sobre</a>
         </div>
         <div class="navbar navbar-light bg-light fixed-bottom border-top">
             @switch (anuncioId)
