--- a/src/MeuPonto.Web/Modules/Termos.cshtml
+++ b/src/MeuPonto.Web/Modules/Termos.cshtml
@@ -13,67 +13,78 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<h2><span>1. Termos</span></h2>
-<p><span>Ao acessar ao site <a href="https://meuponto.azurewebsites.net">Meu Ponto</a>,
-        concorda em cumprir estes termos de serviço, todas as leis e regulamentos aplicáveis ​​e concorda que é
-        responsável pelo cumprimento de todas as leis locais aplicáveis. Se você não concordar com algum desses
-        termos, está proibido de usar ou acessar este site. Os materiais contidos neste site são protegidos
-        pelas leis de direitos autorais e marcas comerciais aplicáveis.</span></p>
-<h2><span>2. Uso de Licença</span></h2>
-<p><span>É concedida permissão para baixar temporariamente uma cópia dos materiais
-        (informações ou software) no site Meu Ponto , apenas para visualização transitória pessoal e não
-        comercial. Esta é a concessão de uma licença, não uma transferência de título e, sob esta licença, você
-        não pode:&nbsp;</span></p>
+<h2>1. Termos</h2>
+<p>
+    Ao acessar o site <a asp-page="/Index">Meu Ponto</a>,
+    você concorda em cumprir estes termos de serviço, todas as leis e regulamentos aplicáveis ​​e concorda que é
+    responsável pelo cumprimento de todas as leis locais aplicáveis. Se você não concordar com algum desses
+    termos, você está proibido de usar ou acessar este site. Os materiais contidos neste site são protegidos
+    pelas leis de direitos autorais e marcas comerciais aplicáveis.
+</p>
+<h2>2. Uso de Licença</h2>
+<p>
+    É concedida uma permissão para baixar o código fonte do site <b>Meu Ponto</b> <a href="https://github.com/mardsystems/MeuPonto">aqui</a>,
+    não apenas para uso pessoal e mas também para fins comerciais.
+    Esta é a concessão de uma licença, não uma transferência de título e, sob esta licença, você não pode:
+</p>
 <ol>
-    <li><span>modificar ou copiar os materiais;&nbsp;</span></li>
-    <li><span>usar os materiais para qualquer finalidade comercial ou para exibição
-            pública (comercial ou não comercial);&nbsp;</span></li>
-    <li><span>tentar descompilar ou fazer engenharia reversa de qualquer software
-            contido no site Meu Ponto;&nbsp;</span></li>
-    <li><span>remover quaisquer direitos autorais ou outras notações de propriedade
-            dos materiais; ou&nbsp;</span></li>
-    <li><span>transferir os materiais para outra pessoa ou 'espelhe' os materiais em
-            qualquer outro servidor.</span></li>
+    <ol>
+        <li>
+            tentar descompilar ou fazer engenharia reversa de qualquer software que não esteja no <a href="https://github.com/mardsystems/MeuPonto">repositório</a> do site <b>Meu Ponto</b>; ou
+        </li>
+        <li>
+            remover quaisquer direitos autorais ou outras notações de propriedade
+            dos materiais do site.
+        </li>
+    </ol>
 </ol>
-<p><span>Esta licença será automaticamente rescindida se você violar alguma dessas
-        restrições e poderá ser rescindida por Meu Ponto a qualquer momento. Ao encerrar a visualização desses
-        materiais ou após o término desta licença, você deve apagar todos os materiais baixados em sua posse,
-        seja em formato eletrónico ou impresso.</span></p>
-<h2><span>3. Isenção de responsabilidade</span></h2>
+<p>
+    Esta licença será automaticamente rescindida se você violar alguma dessas
+    restrições e poderá ser rescindida por <b>Meu Ponto</b> a qualquer momento.
+</p>
+<h2>3. Isenção de responsabilidade</h2>
 <ol>
-    <li><span>Os materiais no site da Meu Ponto são fornecidos 'como estão'. Meu
-            Ponto não oferece garantias, expressas ou implícitas, e, por este meio, isenta e nega todas as
-            outras garantias, incluindo, sem limitação, garantias implícitas ou condições de
-            comercialização, adequação a um fim específico ou não violação de propriedade intelectual ou
-            outra violação de direitos.</span></li>
-    <li><span>Além disso, o Meu Ponto não garante ou faz qualquer representação
-            relativa à precisão, aos resultados prováveis ​​ou à confiabilidade do uso dos materiais em seu
-            site ou de outra forma relacionado a esses materiais ou em sites vinculados a este site.</span>
+    <li>
+        Os materiais no site <b>Meu Ponto</b> são fornecidos 'como estão'.
+        <b>Meu Ponto</b> não oferece garantias, expressas ou implícitas, e, por este meio, isenta e nega todas as
+        outras garantias, incluindo, sem limitação, garantias implícitas ou condições de
+        comercialização, adequação a um fim específico ou não violação de propriedade intelectual ou
+        outra violação de direitos.
+    </li>
+    <li>
+        Além disso, o <b>Meu Ponto</b> não garante ou faz qualquer representação
+        relativa à precisão, aos resultados prováveis ​​ou à confiabilidade do uso dos materiais em seu
+        site ou de outra forma relacionado a esses materiais ou em sites vinculados a este site.
     </li>
 </ol>
-<h2><span>4. Limitações</span></h2>
-<p><span>Em nenhum caso o Meu Ponto ou seus fornecedores serão responsáveis ​​por
-        quaisquer danos (incluindo, sem limitação, danos por perda de dados ou lucro ou devido a interrupção dos
-        negócios) decorrentes do uso ou da incapacidade de usar os materiais em Meu Ponto, mesmo que Meu Ponto
-        ou um representante autorizado da Meu Ponto tenha sido notificado oralmente ou por escrito da
-        possibilidade de tais danos. Como algumas jurisdições não permitem limitações em garantias implícitas,
-        ou limitações de responsabilidade por danos conseqüentes ou incidentais, essas limitações podem não se
-        aplicar a você.</span></p>
-<h2><span>5. Precisão dos materiais</span></h2>
-<p><span>Os materiais exibidos no site da Meu Ponto podem incluir erros técnicos,
-        tipográficos ou fotográficos. Meu Ponto não garante que qualquer material em seu site seja preciso,
-        completo ou atual. Meu Ponto pode fazer alterações nos materiais contidos em seu site a qualquer
-        momento, sem aviso prévio. No entanto, Meu Ponto não se compromete a atualizar os materiais.</span></p>
-<h2><span>6. Links</span></h2>
-<p><span>O Meu Ponto não analisou todos os sites vinculados ao seu site e não é
-        responsável pelo conteúdo de nenhum site vinculado. A inclusão de qualquer link não implica endosso por
-        Meu Ponto do site. O uso de qualquer site vinculado é por conta e risco do usuário.</span></p>
-<p><br></p>
-<h3><span>Modificações</span></h3>
-<p><span>O Meu Ponto pode revisar estes termos de serviço do site a qualquer momento,
-        sem aviso prévio. Ao usar este site, você concorda em ficar vinculado à versão atual desses termos de
-        serviço.</span></p>
-<h3><span>Lei aplicável</span></h3>
-<p><span>Estes termos e condições são regidos e interpretados de acordo com as leis do
-        Meu Ponto e você se submete irrevogavelmente à jurisdição exclusiva dos tribunais naquele estado ou
-        localidade.</span></p>
+<h2>4. Limitações</h2>
+<p>
+    Em nenhum caso o <b>Meu Ponto</b> ou seus fornecedores serão responsáveis ​​por
+    quaisquer danos (incluindo, sem limitação, danos por perda de dados ou lucro ou devido a interrupção dos
+    negócios) decorrentes do uso ou da incapacidade de usar os materiais em <b>Meu Ponto</b>, mesmo que <b>Meu Ponto</b>
+    ou um representante autorizado do <b>Meu Ponto</b> tenha sido notificado oralmente ou por escrito da
+    possibilidade de tais danos. Como algumas jurisdições não permitem limitações em garantias implícitas,
+    ou limitações de responsabilidade por danos conseqüentes ou incidentais, essas limitações podem não se
+    aplicar a você.
+</p>
+<h2>5. Precisão dos materiais</h2>
+<p>
+    Os materiais exibidos no site <b>Meu Ponto</b> podem incluir erros técnicos,
+    tipográficos ou fotográficos. <b>Meu Ponto</b> não garante que qualquer material em seu site seja preciso,
+    completo ou atual. <b>Meu Ponto</b> pode fazer alterações nos materiais contidos em seu site a qualquer
+    momento, sem aviso prévio. No entanto, <b>Meu Ponto</b> não se compromete a atualizar os materiais.
+</p>
+<p>
+    <br>
+</p>
+<h3>Modificações</h3>
+<p>
+    O <b>Meu Ponto</b> pode revisar estes termos de serviço do site a qualquer momento,
+    sem aviso prévio. Ao usar este site, você concorda em ficar vinculado à versão atual desses termos de
+    serviço.
+</p>
+<h3>Lei aplicável</h3>
+<p>
+    Estes termos e condições são regidos e interpretados de acordo com as leis brasileiras e
+    você se submete irrevogavelmente à jurisdição exclusiva dos tribunais do Rio de Janeiro, Brasil.
+</p>
