task: atualiza página Sobre

--- a/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
+++ b/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
                             Seja visto pelos trabalhadores de todo o Brasil
                         </span>
                         <span>
-                            <a href="mailto:mardsystems@hotmail.com" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
+                            <a href="mailto:mardsystems@gmail.com?subject=Quero anunciar no Meu Ponto" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
                                 <i class="bi bi-envelope"></i>
                                 Contactar
                             </a>
