fix: adiciona PartitionKey nas edições

--- a/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Editar.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Editar.cshtml
@@ -178,6 +178,7 @@
                 </div>
             </div>
             <input type="hidden" asp-for="Comprovante.Id" />
+            <input type="hidden" asp-for="Comprovante.PartitionKey" />
             <input type="hidden" asp-for="Comprovante.Version" />
             <button type="submit" value="Salvar" class="btn btn-primary">
                 <i class="bi bi-save"></i>
