--- a/src/MeuPonto.Web/Modules/Perfis/Editar.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Editar.cshtml
@@ -128,6 +128,7 @@
                 </div>
             </div>
             <input type="hidden" asp-for="Perfil.Id" />
+            <input type="hidden" asp-for="Perfil.PartitionKey" />
             <input type="hidden" asp-for="Perfil.Version" />
             <button type="submit" value="Salvar" class="btn btn-primary">
                 <i class="bi bi-save"></i>
