--- a/src/MeuPonto.Web/Modules/Perfis/Empregadores/Editar.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Empregadores/Editar.cshtml
@@ -56,6 +56,7 @@
                 </div>
             </div>
             <input type="hidden" asp-for="Empregador.Id" />
+            <input type="hidden" asp-for="Empregador.PartitionKey" />
             <input type="hidden" asp-for="Empregador.Version" />
             <button type="submit" value="Salvar" class="btn btn-primary">
                 <i class="bi bi-save"></i>
