--- a/src/MeuPonto.Web/Modules/Pontos/Editar.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Editar.cshtml
@@ -147,6 +147,7 @@
                 </div>
             </div>
             <input type="hidden" asp-for="Ponto.Id" />
+            <input type="hidden" asp-for="Ponto.PartitionKey" />
             <input type="hidden" asp-for="Ponto.Version" />
             <button type="submit" value="Salvar" class="btn btn-primary">
                 <i class="bi bi-save"></i>
