--- a/src/MeuPonto.Web/Modules/Pontos/Folhas/Editar.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Folhas/Editar.cshtml
@@ -249,6 +249,7 @@
             </div>
         </div>
         <input type="hidden" asp-for="Folha.Id" />
+        <input type="hidden" asp-for="Folha.PartitionKey" />
         <input type="hidden" asp-for="Folha.Version" />
         <button type="submit" value="Salvar" class="btn btn-primary">
             <i class="bi bi-save"></i>
