--- a/src/MeuPonto.Web/Modules/Pontos/Folhas/Fechar.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Folhas/Fechar.cshtml
@@ -263,6 +263,8 @@
         </div>
         <form method="post">
             <input type="hidden" asp-for="Folha.Id" />
+            <input type="hidden" asp-for="Folha.PartitionKey" />
+            <input type="hidden" asp-for="Folha.Version" />
             <button type="submit" value="Fechar" class="btn btn-primary">
                 <i class="bi bi-file-earmark-check"></i>
                 Fechar
