--- a/src/MeuPonto.Web/Modules/Empregadores/Editar.cshtml
+++ b/src/MeuPonto.Web/Modules/Empregadores/Editar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model MeuPonto.Modules.Perfis.Empregadores.EditarModel
+@model MeuPonto.Modules.Empregadores.EditarModel
 
 @{
     ViewData["Title"] = "Editar Empregador";
