--- a/src/MeuPonto.Web/Modules/Empregadores/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Empregadores/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model MeuPonto.Modules.Perfis.Empregadores.IndexModel
+@model MeuPonto.Modules.Empregadores.IndexModel
 
 @{
     ViewData["Title"] = "Cadastro de Empregadores";
