--- a/src/MeuPonto.Web/Modules/Empregadores/Detalhar.cshtml
+++ b/src/MeuPonto.Web/Modules/Empregadores/Detalhar.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
-@model MeuPonto.Modules.Perfis.Empregadores.ExcluirModel
+@model MeuPonto.Modules.Empregadores.DetalharModel
 
 @{
-    ViewData["Title"] = "Excluir Empregador";
+    ViewData["Title"] = "Detalhar Empregador";
 }
 
 <nav aria-label="breadcrumb">
@@ -10,7 +10,7 @@
         <li class="breadcrumb-item"><a asp-page="/Index"><i class="bi bi-house"></i></a></li>
         <li class="breadcrumb-item"><a asp-page="/Perfis/Index">Perfis</a></li>
         <li class="breadcrumb-item"><a asp-page="./Index">Empregadores</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Excluir</li>
+        <li class="breadcrumb-item active" aria-current="page">Detalhar</li>
     </ol>
 </nav>
 
@@ -26,9 +26,9 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" asp-page="./Detalhar" asp-route-id="@Model.Empregador?.Id">
+                <a class="nav-link active" aria-current="page">
                     <i class="bi bi-card-text"></i>
-                    <span class="d-none d-sm-inline">Detalhar</span>
+                    Detalhar
                 </a>
             </li>
             <li class="nav-item">
@@ -38,17 +38,14 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-danger active" aria-current="page">
+                <a class="nav-link text-danger" asp-page="./Excluir" asp-route-id="@Model.Empregador?.Id">
                     <i class="bi bi-trash"></i>
-                    Excluir
+                    <span class="d-none d-sm-inline">Excluir</span>
                 </a>
             </li>
         </ul>
     </div>
     <div class="card-body">
-        <div class="alert alert-danger" role="alert">
-            Tem certeza que deseja excluir isso?
-        </div>
         <dl class="row g-3 Empregador">
             <dt class="col-sm-3">
                 @Html.DisplayNameFor(model => model.Empregador.Nome)
@@ -57,7 +54,7 @@
                 @Html.DisplayFor(model => model.Empregador.Nome)
             </dd>
         </dl>
-        <div class="accordion mb-3" id="accordionDetalhes">
+        <div class="accordion" id="accordionDetalhes">
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDetalhesTecnicos" aria-expanded="false" aria-controls="collapseDetalhesTecnicos">
@@ -73,13 +70,13 @@
                             <dd class="col-sm-9">
                                 @Html.DisplayFor(model => model.Empregador.Id)
                             </dd>
-                            @*<dt class="col-sm-3">
+@*                            <dt class="col-sm-3">
                                 @Html.DisplayNameFor(model => model.Empregador.PartitionKey)
                             </dt>
                             <dd class="col-sm-9">
                                 @Html.DisplayFor(model => model.Empregador.PartitionKey)
-                            </dd>*@
-                            <dt class="col-sm-3">
+                            </dd>
+*@                            <dt class="col-sm-3">
                                 @Html.DisplayNameFor(model => model.Empregador.CreationDate)
                             </dt>
                             <dd class="col-sm-9">
@@ -96,13 +93,5 @@
                 </div>
             </div>
         </div>
-
-        <form method="post">
-            <input type="hidden" asp-for="Empregador.Id" />
-            <button type="submit" value="Excluir" class="btn btn-danger">
-                <i class="bi bi-trash"></i>
-                Excluir
-            </button>
-        </form>
     </div>
 </div>
