--- a/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
+++ b/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                             <li class="nav-item">
                                 <a class="nav-link @Html.ActiveClass("/Perfis") Perfis" asp-area="" asp-page="/Perfis/Index">Perfis</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link @Html.ActiveClass("/Empregadores") Perfis" asp-area="" asp-page="/Empregadores/Index">Empregadores</a>
+                            </li>
                         </ul>
                     }
                     else
