feat: adiciona Minha Identificação

--- a/src/MeuPonto.Web/Modules/Configuracoes.cshtml
+++ b/src/MeuPonto.Web/Modules/Configuracoes.cshtml
@@ -64,6 +64,16 @@
     <li class="list-group-item d-flex justify-content-between align-items-start gap-3 py-3">
         @*<img src="https://github.com/twbs.png" alt="twbs" class="rounded-circle flex-shrink-0" width="32" height="32">*@
         <div class="ms-2 me-auto">
+            <h6 class="mb-0">Minha Identificação</h6>
+            @*<p class="mb-0 opacity-50">Some placeholder content in a paragraph that goes a little longer so it wraps to a new line.</p>*@
+        </div>
+        <span class="text-primary">
+            <b>@MeuPonto.Modules.Trabalhadores.Trabalhador.Default.Id</b>
+        </span>
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-start gap-3 py-3">
+        @*<img src="https://github.com/twbs.png" alt="twbs" class="rounded-circle flex-shrink-0" width="32" height="32">*@
+        <div class="ms-2 me-auto">
             <h6 class="mb-0">Data/hora do servidor</h6>
             @*<p class="mb-0 opacity-50">Some placeholder content in a paragraph that goes a little longer so it wraps to a new line.</p>*@
         </div>
