fix: corrige Termos

--- a/src/MeuPonto.Web/Modules/Termos.cshtml
+++ b/src/MeuPonto.Web/Modules/Termos.cshtml
@@ -24,7 +24,7 @@
 <h2>2. Uso de Licença</h2>
 <p>
     É concedida uma permissão para baixar o código fonte do site <b>Meu Ponto</b> <a href="https://github.com/mardsystems/MeuPonto">aqui</a>,
-    não apenas para uso pessoal e mas também para fins comerciais.
+    não apenas para uso pessoal mas também para fins comerciais.
     Esta é a concessão de uma licença, não uma transferência de título e, sob esta licença, você não pode:
 </p>
 <ol>
