task: ordena lista de trabalhadores por data de criação

--- a/src/MeuPonto.Web/Modules/Trabalhadores/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Trabalhadores/Index.cshtml
@@ -24,6 +24,7 @@
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Trabalhadores[0].CreationDate)
+                    <i class="bi bi-sort-down"></i>
                 </th>
             </tr>
             <tr>
