fix: adiciona ícone de ordem na lista

--- a/src/MeuPonto.Web/Modules/Empregadores/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Empregadores/Index.cshtml
@@ -28,6 +28,7 @@
                 <th>Ações</th>
                 <th>
                     @Html.DisplayNameFor(model => model.Empregadores[0].Nome)
+                    <i class="bi bi-sort-down"></i>
                 </th>
             </tr>
             <tr>
