--- a/src/MeuPonto.Web/Modules/Perfis/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Index.cshtml
@@ -30,6 +30,7 @@
                     <th rowspan="3">Ações</th>
                     <th rowspan="3">
                         @Html.DisplayNameFor(model => model.Perfil[0].Nome)
+                        <i class="bi bi-sort-down"></i>
                     </th>
                     <th rowspan="3">
                         @Html.DisplayNameFor(model => model.Perfil[0].Ativo)
