--- a/src/MeuPonto.Web/Modules/Error.cshtml
+++ b/src/MeuPonto.Web/Modules/Error.cshtml
@@ -30,12 +30,12 @@ else
 {
     <h3>Suporte</h3>
     <p>
-        Aconteceu mesmo algum problema?
+        Se o probelma persistir envie uma mensagem para o <strong>Administrador</strong> do site para que ele possa investigar o problema.
     </p>
     <p>
         <a href="mailto:mardsystems@gmail.com?subject=MeuPonto - Suporte" target="_blank" class="btn btn-primary">
             <i class="bi bi-envelope"></i>
-            Fale com o Administrador
+            Falar com o Administrador
         </a>
     </p>
 }
