--- a/src/MeuPonto.Web_App/Modules/Perfis/Criar.razor
+++ b/src/MeuPonto.Web_App/Modules/Perfis/Criar.razor
@@ -59,11 +59,11 @@
                             <div class="accordion mb-3" id="accordionJornadaTrabalhoSemanalPrevista">
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSemana" aria-expanded="false" aria-controls="collapseSemana">
+                                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSemana" aria-expanded="true" aria-controls="collapseSemana">
                                             Semana
                                         </button>
                                     </h2>
-                                    <div id="collapseSemana" class="accordion-collapse collapse" data-bs-parent="#accordionJornadaTrabalhoSemanalPrevista">
+                                    <div id="collapseSemana" class="accordion-collapse collapse show" data-bs-parent="#accordionJornadaTrabalhoSemanalPrevista">
                                         <div class="accordion-body">
                                             @for (int i = 0; i < _perfil.JornadaTrabalhoSemanalPrevista.Semana.Count; i++)
                                             {
