task: traduz dias da semana

--- a/src/MeuPonto.Web/Modules/Perfis/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Index.cshtml
@@ -52,25 +52,25 @@
                 </tr>
                 <tr>
                     <th>
-                        @DayOfWeek.Sunday
+                        @DayOfWeek.Sunday.Translate()
                     </th>
                     <th>
-                        @DayOfWeek.Monday
+                        @DayOfWeek.Monday.Translate()
                     </th>
                     <th>
-                        @DayOfWeek.Tuesday
+                        @DayOfWeek.Tuesday.Translate()
                     </th>
                     <th>
-                        @DayOfWeek.Wednesday
+                        @DayOfWeek.Wednesday.Translate()
                     </th>
                     <th>
-                        @DayOfWeek.Thursday
+                        @DayOfWeek.Thursday.Translate()
                     </th>
                     <th>
-                        @DayOfWeek.Friday
+                        @DayOfWeek.Friday.Translate()
                     </th>
                     <th>
-                        @DayOfWeek.Saturday
+                        @DayOfWeek.Saturday.Translate()
                     </th>
                 </tr>
                 <tr>
