--- a/src/MeuPonto.Web/Modules/Perfis/Detalhar.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Detalhar.cshtml
@@ -98,7 +98,7 @@
                                         {
                                             <dl class="row g-3 JornadaTrabalhoDiaria @(Model.Perfil.JornadaTrabalhoSemanalPrevista.Semana[i].DiaSemana.ToString())">
                                                 <dt class="col-sm-3 TempoDiaSemana">
-                                                    @Html.DisplayFor(model => model.Perfil.JornadaTrabalhoSemanalPrevista.Semana[i].DiaSemana)
+                                                    @Model.Perfil.JornadaTrabalhoSemanalPrevista.Semana[i].DiaSemana.Translate()
                                                 </dt>
                                                 <dd class="col-sm-9 TempoDiaSemana">
                                                     @Html.DisplayFor(model => model.Perfil.JornadaTrabalhoSemanalPrevista.Semana[i].Tempo)
