--- a/src/MeuPonto.Web/Modules/Perfis/Editar.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Editar.cshtml
@@ -98,7 +98,7 @@
                                                 <input asp-for="Perfil.JornadaTrabalhoSemanalPrevista.Semana[i].DiaSemana" type="hidden" />
                                                 <div class="row mb-3">
                                                     <label asp-for="Perfil.JornadaTrabalhoSemanalPrevista.Semana[i].Tempo" class="col-sm-3 col-form-label">
-                                                        @Model.Perfil.JornadaTrabalhoSemanalPrevista.Semana[i].DiaSemana
+                                                        @Model.Perfil.JornadaTrabalhoSemanalPrevista.Semana[i].DiaSemana.Translate()
                                                     </label>
                                                     <div class="col-sm-9">
                                                         <input asp-for="Perfil.JornadaTrabalhoSemanalPrevista.Semana[i].Tempo" class="form-control" />
