refact: esclarece perfis

--- a/src/MeuPonto.Web/Modules/Perfis/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Index.cshtml
@@ -2,7 +2,7 @@
 @model MeuPonto.Modules.Perfis.IndexModel
 
 @{
-    ViewData["Title"] = "Cadastro de Perfis";
+    ViewData["Title"] = "Perfis de Trabalho";
 }
 
 <nav aria-label="breadcrumb">
