refact: melhora mensagem de Signed Out

--- a/src/MeuPonto.Web/Areas/MicrosoftIdentity/Pages/Account/SignedOut.cshtml
+++ b/src/MeuPonto.Web/Areas/MicrosoftIdentity/Pages/Account/SignedOut.cshtml
@@ -3,8 +3,8 @@
 @{
 }
 
-<h2>Desconectado</h2>
+<h2>Você foi desconectado</h2>
 
 <p>
-    Você saiu com sucesso.
+    Se quiser entrar novamente <a asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignIn">clique aqui</a>.
 </p>
