--- a/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
+++ b/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
@@ -1,10 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Authorization
 @inject IAuthorizationService AuthorizationService
-@{
-    var random = new Random();
-
-    var anuncioId = random.Next(3) + 1;
-}
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -27,6 +22,38 @@
                     @if ((await AuthorizationService.AuthorizeAsync(User, "Admin")).Succeeded)
                     {
                         <span class="badge text-bg-secondary rounded-pill">Admin</span>
+                    }
+                    else if (User.Identity?.IsAuthenticated == true)
+                    {
+                        switch (Trabalhadores.Trabalhador.Default.CustomerSubscription?.SubscriptionPlanId)
+                        {
+                            case Billing.SubscriptionPlanEnum.Bronze:
+                                <span class="badge text-bg-secondary rounded-pill" style="color: #cd7f32 !important;">
+                                    <i class="bi bi-star-fill"></i>
+                                    <i class="bi bi-star"></i>
+                                    <i class="bi bi-star"></i>
+                                </span>
+
+                                break;
+                            case Billing.SubscriptionPlanEnum.Silver:
+                                <span class="badge text-bg-secondary rounded-pill" style="color: #c0c0c0 !important;">
+                                    <i class="bi bi-star-fill"></i>
+                                    <i class="bi bi-star-fill"></i>
+                                    <i class="bi bi-star"></i>
+                                </span>
+
+                                break;
+                            case Billing.SubscriptionPlanEnum.Gold:
+                                <span class="badge text-bg-secondary rounded-pill" style="color: #ffd700 !important;">
+                                    <i class="bi bi-star-fill"></i>
+                                    <i class="bi bi-star-fill"></i>
+                                    <i class="bi bi-star-fill"></i>
+                                </span>
+
+                                break;
+                            default:
+                                break;
+                        }
                     }
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -83,85 +110,92 @@
             <li class="nav-item"><a class="nav-link px-2 text-body-secondary" asp-area="" asp-page="/Sobre">Sobre</a></li>
         </ul>
         <p class="text-center text-body-secondary">&copy; 2023 - Meu Ponto</p>
-        <div class="navbar navbar-light bg-light fixed-bottom border-top">
-            @switch (anuncioId)
-            {
-                case 1:
-                    <div class="container justify-content-start">
-                        <span class="badge text-bg-secondary me-2">Anúncio</span>
-                        <span class="navbar-brand">
-                            <img class="img-thumbnail border border-secondary bg-light" src="~/img/shop-32x32.png" width="32" height="32" alt="Shop" />
-                            Anuncie aqui
-                        </span>
-                        <span class="navbar-text flex-grow-1">
-                            Seja visto pelos trabalhadores de todo o Brasil
-                        </span>
-                        <span>
-                            <a href="mailto:mardsystems@gmail.com?subject=Quero anunciar no Meu Ponto" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
-                                <i class="bi bi-envelope"></i>
-                                Contactar
-                            </a>
-                        </span>
-                    </div>
+        @if ((await AuthorizationService.AuthorizeAsync(User, "NoAds")).Succeeded == false)
+        {
+            var random = new Random();
 
-                    break;
+            var anuncioId = random.Next(3) + 1;
 
-                case 2:
-                    <div class="container justify-content-start">
-                        <span class="badge text-bg-secondary me-2">Anúncio</span>
-                        <span class="navbar-brand">
-                            <img class="img-thumbnail border border-secondary bg-light" src="~/img/marcelo-32x32.png" width="32" height="32" alt="Foto" />
-                            Marcelo Dias
-                        </span>
-                        <span class="navbar-text flex-grow-1">
-                            Desenvolvedor .NET Sênior
-                        </span>
-                        <span>
-                            <a href="https://linkedin.com/in/mardsystems" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
-                                <i class="bi bi-linkedin"></i>
-                            </a>
-                            <a href="https://github.com/mardsystems" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
-                                <i class="bi bi-github"></i>
-                            </a>
-                            <a href="mailto:mardsystems@gmail.com" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
-                                <i class="bi bi-envelope"></i>
-                                Contactar
-                            </a>
-                        </span>
-                    </div>
+            <div class="navbar navbar-light bg-light fixed-bottom border-top">
+                @switch (anuncioId)
+                {
+                    case 1:
+                        <div class="container justify-content-start">
+                            <span class="badge text-bg-secondary me-2">Anúncio</span>
+                            <span class="navbar-brand">
+                                <img class="img-thumbnail border border-secondary bg-light" src="~/img/shop-32x32.png" width="32" height="32" alt="Shop" />
+                                Anuncie aqui
+                            </span>
+                            <span class="navbar-text flex-grow-1">
+                                Seja visto pelos trabalhadores de todo o Brasil
+                            </span>
+                            <span>
+                                <a href="mailto:mardsystems@gmail.com?subject=Quero anunciar no Meu Ponto" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
+                                    <i class="bi bi-envelope"></i>
+                                    Contactar
+                                </a>
+                            </span>
+                        </div>
 
-                    break;
+                        break;
 
-                case 3:
-                    <div class="container justify-content-start">
-                        <span class="badge text-bg-secondary me-2">Anúncio</span>
-                        <span class="navbar-brand">
-                            <img class="img-thumbnail border border-secondary bg-light" src="~/img/ateliex-32x32.png" width="32" height="32" alt="Logo" />
-                            Ateliex
-                        </span>
-                        <span class="navbar-text flex-grow-1">
-                            Desenvolvimento de sistemas
-                        </span>
-                        <span>
-                            <a href="https://www.linkedin.com/company/ateliex" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
-                                <i class="bi bi-linkedin"></i>
-                            </a>
-                            <a href="https://github.com/ateliex" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
-                                <i class="bi bi-github"></i>
-                            </a>
-                            <a href="https://ateliex.com.br/" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
-                                <i class="bi bi-globe2"></i>
-                                Conhecer
-                            </a>
-                        </span>
-                    </div>
+                    case 2:
+                        <div class="container justify-content-start">
+                            <span class="badge text-bg-secondary me-2">Anúncio</span>
+                            <span class="navbar-brand">
+                                <img class="img-thumbnail border border-secondary bg-light" src="~/img/marcelo-32x32.png" width="32" height="32" alt="Foto" />
+                                Marcelo Dias
+                            </span>
+                            <span class="navbar-text flex-grow-1">
+                                Desenvolvedor .NET Sênior
+                            </span>
+                            <span>
+                                <a href="https://linkedin.com/in/mardsystems" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
+                                    <i class="bi bi-linkedin"></i>
+                                </a>
+                                <a href="https://github.com/mardsystems" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
+                                    <i class="bi bi-github"></i>
+                                </a>
+                                <a href="mailto:mardsystems@gmail.com" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
+                                    <i class="bi bi-envelope"></i>
+                                    Contactar
+                                </a>
+                            </span>
+                        </div>
 
-                    break;
+                        break;
 
-                default:
-                    break;
-            }
-        </div>
+                    case 3:
+                        <div class="container justify-content-start">
+                            <span class="badge text-bg-secondary me-2">Anúncio</span>
+                            <span class="navbar-brand">
+                                <img class="img-thumbnail border border-secondary bg-light" src="~/img/ateliex-32x32.png" width="32" height="32" alt="Logo" />
+                                Ateliex
+                            </span>
+                            <span class="navbar-text flex-grow-1">
+                                Desenvolvimento de sistemas
+                            </span>
+                            <span>
+                                <a href="https://www.linkedin.com/company/ateliex" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
+                                    <i class="bi bi-linkedin"></i>
+                                </a>
+                                <a href="https://github.com/ateliex" target="_blank" class="btn btn-sm btn-outline-secondary rounded-circle">
+                                    <i class="bi bi-github"></i>
+                                </a>
+                                <a href="https://ateliex.com.br/" target="_blank" class="btn btn-sm btn-outline-primary rounded-pill">
+                                    <i class="bi bi-globe2"></i>
+                                    Conhecer
+                                </a>
+                            </span>
+                        </div>
+
+                        break;
+
+                    default:
+                        break;
+                }
+            </div>
+        }
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
